renamed files and adding gifs.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="test.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
-  <script src="https://unpkg.com/p5.createloop@0.2.8/dist/p5.createloop.js"></script>
+  <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
