Centered Sketch.js

--- a/index.html
+++ b/index.html
@@ -1,27 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="https://glitch.com/favicon.ico" />
-  
-    <!-- 
-      This is an HTML comment
-      You can write text in a comment and the content won't be visible in the page
-    -->
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Hello</title>
+    <title>Poke-A-Guy</title>
+    <link rel="icon" href="https://glitch.com/favicon.ico" />
 
-  <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
-  <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
+    <link rel="stylesheet" href="stylesheet.css">
 
-  <!-- This line removes any default padding and style.
-       You might only need one of these values set. -->
-  <style> body { padding: 0; margin: 0; } </style>
-</head>
+    <script type="text/javascript" src="libraries/p5.min.js"></script>
+    <script type="text/javascript" src="sketch.js"></script>
+  </head>
 
-<body>
-</body>
+  <body>
+  </body>
 </html>
