--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="stylesheet.css">
 
     <script type="text/javascript" src="libraries/p5.min.js"></script>
+    <script type="text/javascript" src="libraries/p5.sound.min.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
   </head>
 
